# firewall

./: .gitignore  0810 firewall dashboard-1754807152860.json  launcher.py  main.py  policy.json  pyproject.toml  set-fedora-localproxy.sh  set-linux-localproxy.sh  set-mac-localproxy.sh  set-win-localproxy.bat  unset-fedora-localproxy.sh  unset-linux-localproxy.sh  unset-mac-localproxy.sh  unset-win-localproxy.bat
example/: domain_block.py  echo_client.py  echo_intercept.py  echo_server.py  https_capture.py  log_dummy_generator.py  ollama_chat.py  packet_capture.py  packet_ip_block.py  policy-generator.py  policy_generator.py  regex.py  url_capture.py
loki/: config.yaml
src/: app.py
src/assistant/: ollama_analyzer.py
src/common/: id_utils.py
src/firewall/: command.py  config.py  controller.py  ui.py
src/firewall/interceptor/: mitmproxy_interceptor.py  scapy_interceptor.py
src/firewall/logger/: log_models.py  logger.py  loki.py
src/firewall/policy/: policy.py  policy_models.py
